# viennacl-benchmark

./: .gitmodules  CMakeLists.txt  README.md  install.sh
result/: cublas_results.txt  inner_product.txt.c4  inner_product.txt.g2  matrix_mult.txt.c4  matrix_mult.txt.g2
src/: cublas.cpp  inner_product.cpp  main.cpp  matrix_mult.cpp
